--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/main.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/main.css
@@ -363,3 +363,9 @@ ul.jcarousel-skin li{
 .doCheckoutBut{
 	margin-right:0;
 }
+#tax-msg{
+	font-size:11px;
+	color: blue;
+	font-weight: bold;
+	padding-bottom: 16px;
+}
